prusti-tests/tests/verify/ui/non-pure-function.stderr
error: [Prusti: invalid specification] use of impure function "get_true" in pure code is not allowed
  --> $DIR/non-pure-function.rs:19:12
   |
19 | #[requires(get_true())]
   |            ^^^^^^^^^^

error: [Prusti: invalid specification] use of impure function "foo::get_false" in pure code is not allowed
  --> $DIR/non-pure-function.rs:22:32
   |
22 | #[requires(pure_get_true() && !foo::get_false())]
   |                                ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

